--- a/spring-batch-docs/asciidoc/step.adoc
+++ b/spring-batch-docs/asciidoc/step.adoc
@@ -1,4 +1,4 @@
-:batch-asciidoc: http://docs.spring.io/spring-batch/reference/html/
+:batch-asciidoc: ./
 :toc: left
 :toclevels: 4
 
@@ -37,7 +37,7 @@ Spring Batch uses a 'Chunk-oriented' processing style within its
 .Chunk-oriented Processing
 image::{batch-asciidoc}images/chunk-oriented-processing.png[Chunk Oriented Processing, scaledwidth="60%"]
 
-The followig code shows the same concepts shown:
+The following code shows the same concepts shown:
 
 
 [source, java]
@@ -1455,7 +1455,7 @@ While this method of terminating a batch job is sufficient for
       These elements affect only the final statuses of the
       `Job`. For example, it is possible for every step
       in a job to have a status of `FAILED` but for the job to have a status of
-      `COMPLETED`. (It is also possible for the steps to have a status of `FAILED` and the job to have a status of `COMPLETED`.)
+      `COMPLETED`.
 
 [[endElement]]
 
