--- a/spring-batch-docs/asciidoc/appendix.adoc
+++ b/spring-batch-docs/asciidoc/appendix.adoc
@@ -1,4 +1,4 @@
-:batch-asciidoc: http://docs.spring.io/spring-batch/reference/html/
+:batch-asciidoc: ./
 :toc: left
 :toclevels: 4
 
@@ -24,8 +24,8 @@
             mark the beginning and end of records with the constant values in
             `FieldSetMapper AggregateItemReader#__$$BEGIN_RECORD$$__` and
             `AggregateItemReader#__$$END_RECORD$$__`.
-|AmqpItemReader|Given a Spring AmqpTemplate, it provides
-            synchronous receive methods. The receiveAndConvert() method
+|AmqpItemReader|Given a Spring `AmqpTemplate`, it provides
+            synchronous receive methods. The `receiveAndConvert()` method
             lets you receive POJO objects.
 |FlatFileItemReader|Reads from a flat file. Includes `ItemStream`
             and `Skippable` functionality. See link:readersAndWriters.html#flatFileItemReader[`FlatFileItemReader`].
@@ -40,8 +40,8 @@
             such that large datasets can be read without running out of
             memory.
 |JmsItemReader|Given a Spring `JmsOperations` object and a JMS
-            `Destination` or destination name to which to send errors, provides items
-            received through the injected `JmsOperations` `receive()`
+            Destination or destination name to which to send errors, provides items
+            received through the injected `JmsOperations#receive()`
             method.
 |JpaPagingItemReader|Given a JPQL statement, pages through the
             rows, such that large datasets can be read without running out of
@@ -49,8 +49,8 @@
 |ListItemReader|Provides the items from a list, one at a
             time.
 |MongoItemReader|Given a `MongoOperations` object and a JSON-based MongoDB
-            query, provides items received from the `MongoOperations` `find` method.
-|Neo4jItemReader|Given a Neo4jOperations object and the components of a
+            query, provides items received from the `MongoOperations#find()` method.
+|Neo4jItemReader|Given a `Neo4jOperations` object and the components of a
             Cyhper query, items are returned as the result of the Neo4jOperations.query
             method.
 |RepositoryItemReader|Given a Spring Data `PagingAndSortingRepository` object,
@@ -75,7 +75,7 @@
 |AbstractItemStreamItemWriter|Abstract base class that combines the
             `ItemStream` and
             `ItemWriter` interfaces.
-|AmqpItemWriter|Given a Spring AmqpTemplate, it provides
+|AmqpItemWriter|Given a Spring `AmqpTemplate`, it provides
             for a synchronous `send` method. The `convertAndSend(Object)`
              method lets you send POJO objects.
 |CompositeItemWriter|Passes an item to the `process` method of each
@@ -96,7 +96,7 @@
             take rudimentary steps to locate a failure during a
             `flush`.
 |JmsItemWriter|Using a `JmsOperations` object, items are written
-            to the default queue through the `JmsOperations.convertAndSend()` method.
+            to the default queue through the `JmsOperations#convertAndSend()` method.
 |JpaItemWriter|This item writer is JPA EntityManager-aware
             and handles some transaction-related work that a non-"JPA-aware"
             `ItemWriter` would not need to know about and
